Update File Utils to return bytes array